# rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  data  install-all  linux-build-all  uninstall-all
.github/workflows/: main.yml
apps/anybase/: Cargo.toml
apps/anybase/src/: cli.rs  lib.rs  main.rs
apps/archive/: Cargo.toml  Design.md  TODO.md
apps/archive/src/: archive.rs  cli.rs  compressors.rs  crc.rs  create.rs  errors.rs  extract.rs  info.rs  lib.rs  line_progress.rs  list.rs  main.rs  reader.rs  test.rs
apps/base256/: Cargo.toml
apps/base256/src/: main.rs
apps/binary-find/: Cargo.toml
apps/binary-find/src/: lib.rs  main.rs
apps/binary-input/: Cargo.toml
apps/binary-input/src/: errors.rs  lib.rs  main.rs  unix.rs
apps/binary-wav-codec/: Cargo.toml
apps/binary-wav-codec/src/: int_reader.rs  lib.rs  main.rs
apps/binary_wav_codec/: Cargo.toml
apps/binary_wav_codec/src/: errors.rs  int_reader.rs  lib.rs  main.rs
apps/bitmap/: Cargo.toml
apps/bitmap/src/: decode.rs  encode.rs
apps/btc-tools/: Cargo.toml
apps/btc-tools/src/: brain_wallet.rs  cli.rs  get_address.rs  lib.rs  main.rs  vanity_address.rs  vanity_wallet.rs
apps/btrfs-dedup/: Cargo.toml
apps/btrfs-dedup/src/: errors.rs  main.rs
apps/char-count/: Cargo.toml
apps/char-count/src/: main.rs
apps/char_count/: Cargo.toml
apps/char_count/src/: main.rs
apps/character-statistics/: Cargo.toml
apps/character-statistics/src/: string-purify.rs
apps/character_statistics/: Cargo.toml
apps/character_statistics/src/: main.rs
apps/completion-generator/: Cargo.toml
apps/completion-generator/src/: cli.rs  lib.rs  main.rs
apps/cow-dedup/: Cargo.toml
apps/cow-dedup/src/: main.rs
apps/cow-dedupe/: Cargo.toml
apps/cow-dedupe/src/: cli.rs  dedupe.rs  group.rs  hash.rs  lib.rs  main.rs
apps/cow-dedupe/src/serde/: json.rs  mod.rs
apps/cpu-loop/: Cargo.toml
apps/cpu-loop/src/: concurrent.rs
apps/cpu_loop/: Cargo.toml
apps/cpu_loop/src/: concurrent.rs  main.rs
apps/default_file_mode/: Cargo.toml
apps/default_file_mode/src/: linux.rs  main.rs  others.rs
apps/enc/: Cargo.toml
apps/enc/src/: cli.rs  errors.rs  lib.rs  main.rs
apps/file-bitmap-codec/: Cargo.toml
apps/file-bitmap-codec/src/: encode.rs  errors.rs  grayscale_codec.rs  lib.rs  main.rs  rgb_codec.rs
apps/file-size/: Cargo.toml
apps/file-size/src/: main.rs
apps/file_and_bitmap_streamed_converter/: Cargo.toml
apps/file_and_bitmap_streamed_converter/src/: decode.rs  encode.rs  lib.rs
apps/file_size/: Cargo.toml
apps/file_size/src/: main.rs
apps/forward/: Cargo.toml
apps/forward/src/: errors.rs  main.rs
apps/fourier-series/: Cargo.toml
apps/fourier-series/src/: cli.rs  demo.rs  lib.rs  main.rs
apps/git-commit-time-statistics/: Cargo.toml
apps/git-commit-time-statistics/src/: cli_impl.rs  lib.rs  main.rs
apps/git_commit_time_statistics/: Cargo.toml
apps/git_commit_time_statistics/src/: main.rs
apps/hash-tools/: Cargo.toml
apps/hash-tools/src/: cli.rs  lib.rs  main.rs
apps/http-server/: Cargo.toml
apps/http-server/src/: errors.rs  lib.rs  main.rs  server.rs
apps/image-stegano-bg/: Cargo.toml
apps/image-stegano-bg/src/: cli.rs  main.rs
apps/image-track/: Cargo.toml  README.md
apps/image-track/src/: add.rs  create.rs  info.rs  lib.rs  main.rs  new.rs
apps/kaprekar/: Cargo.toml
apps/kaprekar/src/: main.rs
apps/ncat/: Cargo.toml
apps/ncat/src/: connect.rs  errors.rs  lib.rs  listen.rs  main.rs
apps/network-monitor/: Cargo.toml
apps/network-monitor/src/: cli.rs  lib.rs  main.rs
apps/phone-transfer/: Cargo.toml
apps/phone-transfer/src/: errors.rs  lib.rs  main.rs  qr.rs  receive.rs  send.rs
apps/regex/: Cargo.toml
apps/regex-test/: Cargo.toml
apps/regex-test/src/: main.rs
apps/regex/src/: main.rs
apps/reverse/: Cargo.toml
apps/reverse-read/: Cargo.toml
apps/reverse-read/src/: main.rs
apps/reverse/src/: main.rs
apps/rime-tui/: Cargo.toml
apps/send-email/: Cargo.toml
apps/send-email/src/: cli.rs  lib.rs  main.rs
apps/serial-cat/: Cargo.toml
apps/serial-cat/src/: errors.rs  main.rs
apps/shuffle-string/: Cargo.toml
apps/shuffle-string/src/: main.rs
apps/shuffle_string/: Cargo.toml
apps/shuffle_string/src/: main.rs
apps/stdin-size/: Cargo.toml
apps/stdin_size/: Cargo.toml
apps/stdin_size/src/: main.rs
apps/stream-recorder/: Cargo.toml
apps/stream-recorder/src/: cli.rs  lib.rs  main.rs
apps/task-notify/: Cargo.toml
apps/task-notify/src/: cli.rs  lib.rs  main.rs  (+2 more)
apps/tcp-crypto-tunnel/: Cargo.toml
apps/tcp-crypto-tunnel/src/: cli.rs  client.rs  errors.rs  lib.rs  main.rs  server.rs
apps/tcp-crypto-wrapper/: Cargo.toml
apps/tcp-file-reader/: Cargo.toml
apps/to-human-readable/: Cargo.toml
apps/transfer/: Cargo.toml
apps/transfer/src/: config.rs  lib.rs  main.rs  receive.rs  send.rs
apps/ucd-parser/: Cargo.toml
apps/ucd-parser/src/: cli.rs  lib.rs  main.rs
apps/unicode-name/: Cargo.toml
apps/unicode-name/src/: cli.rs  lib.rs  main.rs
apps/utf-converter/: Cargo.toml
apps/wav-fourier-series/: Cargo.toml
apps/wav-fourier-series/src/: cli.rs  lib.rs  main.rs
apps/wav-wrapper/: Cargo.toml
apps/wrap/: Cargo.toml
apps/x11-event-monitor/: Cargo.toml  README.md
apps/x11-event-monitor/src/: cli.rs  lib.rs  linux.rs  main.rs  unix.rs
lib/: Cargo.toml
lib/data/: fourier-series-result.txt
lib/src/: byteorder.rs  char.rs  complex_num.rs  epicycle.rs  fourier_series.rs  fs.rs  i32.rs  io.rs  lib.rs  libc.rs  macros.rs  point.rs  str.rs  time.rs  utf8.rs  utils.rs
lib/src/complex/: integral.rs  mod.rs
lib/src/io/: duplicator.rs  errors.rs  mod.rs  poll.rs
lib/src/lazy/: mod.rs
libs/stream-num-reader/: Cargo.toml
src/: character_statistics.rs  data.txt  demo.rs  demo1.rs  file_size.rs  fourier_series_demo.rs  lib.rs  main.rs  reverse.rs  shuffle_string.rs  stdin_size.rs  utf_converter.rs  utils.rs
src/app/: character_statistics.rs  issue.md  utf-converter.rs  utf_converter.rs
src/lib/: byteorder.rs  i32.rs  utf8.rs
tool/: Cargo.toml
tool/src/: main.rs  others.rs
(+10 files in other folders)
