[package]
default-run = "demo"
name = "rust"
version = "1.0.0"
authors = ["bczhc <bczhc0@126.com>"]
license = "MIT"
edition = "2021"

[workspace]
members = [
    "apps/character-statistics",
    "apps/file-size",
    "apps/reverse",
    "apps/shuffle-string",
    "apps/stdin-size",
    "apps/utf-converter",
    "apps/file-bitmap-codec",
    "apps/cpu-loop",
    "apps/char-count",
    "apps/regex",
    "apps/transfer",
    "apps/base256",
    "apps/wrap",
    "apps/git-commit-time-statistics",
    "apps/binary-wav-codec",
    "apps/binary-input",
    "apps/forward",
    "apps/ncat",
    "apps/http-server",
    "apps/serial-cat",
    "apps/phone-transfer",
    "apps/to-human-readable",
    "apps/cow-dedup",
]

[[bin]]
path = "src/demo.rs"
name = "demo"

[[bin]]
path = "src/fourier_series_demo.rs"
name = "fourier-series-demo"

[dependencies]
bczhc_lib = { path = "./lib", version = "1.0.0" }
libc = "0.2.95"
errno = "0.2.7"
clap = "2.33.3"
num_cpus = "1.13.0"
regex = "1.5.4"
rusqlite = "0.26.3"
rand = "0.8.4"
terminal_size = "0.1.17"
hound = "3.4.0"
byteorder = "1.4.3"
console = "0.15.0"
