[workspace]
members = [
    "apps/character-statistics",
    "apps/file-size",
    "apps/reverse",
    "apps/shuffle-string",
    "apps/stdin-size",
    "apps/utf-converter",
    "apps/file-bitmap-codec",
    "apps/cpu-loop",
    "apps/char-count",
    "apps/regex",
    "apps/transfer",
    "apps/base256",
    "apps/wrap",
    "apps/git-commit-time-statistics",
    "apps/binary-wav-codec",
    "apps/binary-input",
    "apps/forward",
    "apps/ncat",
    "apps/http-server",
    "apps/serial-cat",
    "apps/phone-transfer",
    "apps/to-human-readable",
    "apps/cow-dedup",
    "apps/reverse-read",
    "apps/image-track",
    "apps/archive",
    "apps/fourier-series",
    "apps/completion-generator",
]
