[workspace]
members = [
    "apps/character-statistics",
    "apps/file-size",
    "apps/reverse",
    "apps/shuffle-string",
    "apps/stdin-size",
    "apps/utf-converter",
    "apps/file-bitmap-codec",
    "apps/cpu-loop",
    "apps/char-count",
    "apps/regex",
    "apps/transfer",
    "apps/base256",
    "apps/wrap",
    "apps/git-commit-time-statistics",
    "apps/binary-wav-codec",
    "apps/binary-input",
    "apps/forward",
    "apps/ncat",
    "apps/http-server",
    "apps/serial-cat",
    "apps/phone-transfer",
    "apps/to-human-readable",
    "apps/cow-dedupe",
    "apps/reverse-read",
    "apps/image-track",
    "apps/archive",
    "apps/fourier-series",
    "apps/completion-generator",
    "apps/send-email",
    "apps/tcp-crypto-tunnel",
    "apps/enc",
    "apps/wav-fourier-series",
    "apps/task-notify",
    "apps/unicode-name",
    "apps/network-monitor",
    "apps/ucd-parser",
    "apps/x11-event-monitor",
    "apps/anybase",
    "apps/image-stegano-bg",
    "apps/btc-tools",
    "apps/hash-tools",
    "apps/stream-recorder",
]
