[package]
name = "bczhc_lib"
version = "1.0.0"
authors = ["bczhc <bczhc0@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
libc = "0.2.140"
float-cmp = "0.9.0"
thiserror = "1.0.40"
errno = "0.2.8"
polling = "2.6.0"
cfg-if = "1.0.0"
rayon = "1.7.0"
num-complex = "0.4.3"
num-traits = "0.2.15"
euclid = "0.22.8"
