[package]
name = "bczhc_lib"
version = "1.0.0"
authors = ["bczhc <bczhc0@126.com>"]
edition = "2021"

[dependencies]
threadpool = "1.8.1"
libc = "0.2.149"
float-cmp = "0.9.0"
thiserror = "1.0.49"
errno = "0.2.8"
polling = "2.8.0"
cfg-if = "1.0.0"
rayon = "1.8.0"
num-complex = "0.4.4"
num-traits = "0.2.17"
euclid = "0.22.9"
