[package]
name = "tool"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bczhc_lib = { path = "../lib", version = "1.0.0" }
libc = "0.2.95"
errno = "0.2.7"
clap = "2.33.3"
num_cpus = "1.13.0"
encoding_rs = "0.8.28"
