[package]
name = "archive"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = "4.0.26"
byteorder = "1.4.3"
flate2 = "1.0.24"
xz2 = "0.1.7"
zstd = "0.11.2+zstd.1.5.2"
walkdir = "2.3.2"
pathdiff = "0.2.1"
crc = "3.0.0"
thiserror = "1.0.35"
bczhc_lib = { path = "../../lib" }
once_cell = "1.14.0"
cfg-if = "1.0.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
bzip2 = "0.4.3"
filetime = "0.2.18"
chrono = "0.4.22"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.87"
brotli = "3.3.4"
prettytable-rs = "0.9.0"
pbr = "1.0.4"
console = "0.15.2"
unicode-width = "0.1.10"
clap_complete = "4.0.5"

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"
