[package]
name = "archive"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = "4.1.13"
byteorder = "1.4.3"
flate2 = "1.0.25"
xz2 = "0.1.7"
zstd = "0.11.2+zstd.1.5.2"
walkdir = "2.3.3"
pathdiff = "0.2.1"
crc = "3.0.1"
thiserror = "1.0.40"
bczhc_lib = { path = "../../lib" }
once_cell = "1.17.1"
cfg-if = "1.0.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
bzip2 = "0.4.4"
filetime = "0.2.20"
chrono = "0.4.24"
serde = { version = "1.0.158", features = ["serde_derive"] }
serde_json = "1.0.94"
brotli = "3.3.4"
prettytable-rs = "0.10.0"
pbr = "1.1.1"
console = "0.15.5"
unicode-width = "0.1.10"
clap_complete = "4.1.5"
anyhow = "1.0.70"

[target.'cfg(unix)'.dependencies]
nix = "0.25.1"
