[package]
name = "archive"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = "4.4.6"
byteorder = "1.5.0"
flate2 = "1.0.28"
xz2 = "0.1.7"
zstd = "0.11.2+zstd.1.5.2"
walkdir = "2.4.0"
pathdiff = "0.2.1"
crc = "3.0.1"
thiserror = "1.0.49"
bczhc_lib = { path = "../../lib" }
once_cell = "1.18.0"
cfg-if = "1.0.0"
num-traits = "0.2.17"
num-derive = "0.3.3"
bzip2 = "0.4.4"
filetime = "0.2.22"
chrono = "0.4.31"
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = "1.0.107"
brotli = "3.4.0"
prettytable-rs = "0.10.0"
pbr = "1.1.1"
console = "0.15.7"
unicode-width = "0.1.11"
clap_complete = "4.4.3"
anyhow = "1.0.75"
bzip3 = { version = "0.5.1", features = ["bundled"] }
bytesize = "1.3.0"

[target.'cfg(unix)'.dependencies]
nix = "0.25.1"
