[package]
name = "btc-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.30.1", features = ["rand"] }
rand = "0.8.5"
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0.75"
num_cpus = "1.16.0"
hex = "0.4.3"
bip38 = { git = "https://github.com/bczhc/bip38", rev = "33522f5500cd81b6908184deec6bd956bb8adca2" }
rpassword = "7.2.0"
rayon = "1.8.0"
digest = "0.10.7"
blake3 = "1.5.0"
static_assertions = "1.1.0"
unicode-normalization = "0.1.22"
hex-literal = "0.4.1"