[package]
name = "completion-generator"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive = { path = "../archive" }
fourier-series = { path = "../fourier-series" }
cow-dedupe = { path = "../cow-dedupe" }
enc = { path = "../enc" }
send-email = { path = "../send-email" }
tcp-crypto-tunnel = { path = "../tcp-crypto-tunnel" }
task-notify = { path = "../task-notify" }

clap = "4.0.26"
clap_complete = "4.0.5"
once_cell = "1.16.0"
