[package]
name = "completion-generator"
version = "1.0.0"
edition = "2021"

[dependencies]
archive = { path = "../archive" }
fourier-series = { path = "../fourier-series" }
cow-dedupe = { path = "../cow-dedupe" }
enc = { path = "../enc" }
send-email = { path = "../send-email" }
tcp-crypto-tunnel = { path = "../tcp-crypto-tunnel" }
task-notify = { path = "../task-notify" }
network-monitor = { path = "../network-monitor" }
ucd-parser = { path = "../ucd-parser" }
x11-event-monitor = { path = "../x11-event-monitor" }
btc-tools = { path = "../btc-tools" }
anybase = { path = "../anybase" }
image-stegano-bg = { path = "../image-stegano-bg" }

clap = "4.1.13"
clap_complete = "4.1.5"
once_cell = "1.17.1"
