[package]
name = "cow-dedupe"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
reflink = { git = "https://github.com/nicokoch/reflink", rev = "e8d93b46" }
walkdir = "2.3.3"
thiserror = "1.0.40"
bytesize = "1.2.0"
anyhow = "1.0.70"
blake3 = { version = "1.3.3", features = ["traits-preview", "digest"] }
sha2 = "0.10.6"
static_assertions = "1.1.0"
digest = "0.10.6"
rayon = "1.7.0"
once_cell = "1.17.1"
hex = "0.4.3"
sha3 = "0.10.7"
bczhc_lib = { path = "../../lib" }
colored = "2.0.0"
indicatif = "0.17.3"
jwalk = "0.8.1"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
chrono = "0.4.24"
bincode = { version = "1.3.3" }
