[package]
name = "cow-dedupe"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
reflink = { git = "https://github.com/nicokoch/reflink", rev = "e8d93b46" }
walkdir = "2.4.0"
thiserror = "1.0.49"
bytesize = "1.3.0"
anyhow = "1.0.75"
blake3 = { version = "1.5.0", features = ["traits-preview", "digest"] }
sha2 = "0.10.8"
static_assertions = "1.1.0"
digest = "0.10.7"
rayon = "1.8.0"
once_cell = "1.18.0"
hex = "0.4.3"
sha3 = "0.10.8"
bczhc_lib = { path = "../../lib" }
colored = "2.0.4"
indicatif = "0.17.7"
jwalk = "0.8.1"
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = "1.0.107"
chrono = "0.4.31"
bincode = { version = "1.3.3" }
cfg-if = "1.0.0"
