[package]
name = "default-file-mode"
version = "1.0.0"
authors = ["bczhc <bczhc0@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bczhc_lib = { path = "../../lib", version = "1.0.0" }
libc = "0.2.95"
magic = "0.12.2"