[package]
name = "file-bmp-codec"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp = "0.5.0"
image = "0.24.5"
byteorder = "1.4.3"
bczhc_lib = { path = "../../lib", version = "1.0.0" }
clap = { version = "3.2.23", features = ["derive"] }
quick-error = "2.0.1"
euclid = "0.22.8"
