[package]
name = "file_and_bitmap_streamed_converter"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "file2bitmap"
path = "src/encode.rs"

[[bin]]
name = "bitmap2file"
path = "src/decode.rs"

[dependencies]
bmp = "0.5.0"
byteorder = "1.4.3"
lib = { path = "../../lib", version = "1.0.0" }
