[package]
name = "file-size"
version = "1.0.0"
authors = ["bczhc <bczhc0@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = {path = "../../lib", version = "1.0.0"}
size_format = "1.0.2"
libc = "0.2.93"
errno = "0.2.7"
