[package]
name = "forward"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bczhc_lib = { path = "../../lib", version = "1.0.0" }
clap = "3.2.25"
once_cell = "1.18.0"
thiserror = "1.0.49"
errno = "0.2.8"
