[package]
name = "fourier-series"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/demo.rs"

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
num_cpus = "1.14.0"
once_cell = "1.16.0"
rayon = "1.5.3"
bczhc_lib = { path = "../../lib" }
num-complex = "0.4.2"
num-traits = "0.2.15"
