[package]
name = "fourier-series"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/demo.rs"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
num_cpus = "1.15.0"
once_cell = "1.17.1"
rayon = "1.7.0"
bczhc_lib = { path = "../../lib" }
num-complex = "0.4.3"
num-traits = "0.2.15"
