[package]
name = "fourier-series"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/demo.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
num_cpus = "1.16.0"
once_cell = "1.18.0"
rayon = "1.8.0"
bczhc_lib = { path = "../../lib" }
num-complex = "0.4.4"
num-traits = "0.2.17"
