[package]
name = "git-commit-time-stat"
version = "1.0.0"
edition = "2021"

[dependencies]
bczhc_lib = { path = "../../lib", version = "1.0.0" }
clap = "2.34.0"
chrono = "0.4.31"
ansi_term = "0.12.1"
terminal_size = "0.1.17"
git2 = { version = "0.13.25", optional = true }

[features]
enabled = ["dep:git2"]
