[package]
name = "hash-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
digest = "0.10.7"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.7"
blake3 = { version = "1.4.1", features = ["digest", "traits-preview"] }
anyhow = "1.0.72"
hex = "0.4.3"
