[package]
name = "hash-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
digest = "0.10.7"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
blake3 = { version = "1.5.0", features = ["digest", "traits-preview"] }
anyhow = "1.0.75"
hex = "0.4.3"
blake2 = "0.10.6"
sha3 = "0.10.8"
ripemd = "0.1.3"
bczhc_lib = { path = "../../lib" }
hex-literal = "0.4.1"
