[package]
name = "http-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
clap = "3.1.8"
regex = "1.5.5"
once_cell = "1.10.0"
bczhc_lib = { path = "../../lib" }
urlencoding = "2.1.0"
mime_guess = "2.0.4"
mime = "0.3.16"
http = "0.2.6"
