[package]
name = "http-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
clap = "3.2.23"
regex = "1.7.2"
once_cell = "1.17.1"
bczhc_lib = { path = "../../lib" }
urlencoding = "2.1.2"
mime_guess = "2.0.4"
mime = "0.3.17"
http = "0.2.9"
