[package]
name = "http-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
clap = "3.2.25"
regex = "1.10.1"
once_cell = "1.18.0"
bczhc_lib = { path = "../../lib" }
urlencoding = "2.1.3"
mime_guess = "2.0.4"
mime = "0.3.17"
http = "0.2.9"
