[package]
name = "image-track"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.109"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
clap = "3.2.25"
byteorder = "1.5.0"
bczhc_lib = { path = "../../lib" }
