[package]
name = "ncat"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "my-ncat"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.23"
thiserror = "1.0.40"
libc = "0.2.140"
errno = "0.2.8"
bczhc_lib = { path = "../../lib" }
polling = "2.6.0"
