[package]
name = "phone-transfer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.9"
tar = "0.4.38"
thiserror = "1.0.30"
walkdir = "2.3.2"
byteorder = "1.4.3"
cfg-if = "1.0.0"
pathdiff = "0.2.1"
