[package]
name = "phone-transfer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.25"
tar = "0.4.40"
thiserror = "1.0.49"
walkdir = "2.4.0"
byteorder = "1.5.0"
cfg-if = "1.0.0"
pathdiff = "0.2.1"
bczhc_lib = {path = "../../lib"}
num-traits = "0.2.17"
num-derive = "0.3.3"
once_cell = "1.18.0"
qr2term = "0.3.1"

[target.'cfg(unix)'.dependencies]
pnet = "0.30.0"
