[package]
name = "reverse"
version = "1.0.0"
authors = ["bczhc <bczhc0@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bczhc_lib = {path = "../../lib", version = "1.0.0"}
unicode-segmentation = "1.10.1"
clap = "4.1.13"
