[package]
name = "serial-cat"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.25"
serialport = "4.2.2"
polling = "2.8.0"
thiserror = "1.0.49"
bczhc_lib = { path = "../../lib" }
cfg-if = "1.0.0"
