[package]
name = "tcp-crypto-tunnel"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bczhc_lib = {path = "../../lib"}
clap = "4.1.13"
thiserror = "1.0.40"
once_cell = "1.17.1"
blake3 = "1.3.3"
rpassword = "7.2.0"
polling = "2.6.0"
