[package]
name = "tcp-crypto-tunnel"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bczhc_lib = {path = "../../lib"}
clap = "4.4.6"
thiserror = "1.0.49"
once_cell = "1.18.0"
blake3 = "1.5.0"
rpassword = "7.2.0"
polling = "2.8.0"
