[package]
name = "transfer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
home = "0.5.5"
bczhc_lib = {path = "../../lib", version = "1.0.0"}
sha1 = "0.6.1"
byteorder = "1.5.0"
once_cell = "1.18.0"
