[package]
name = "ucd-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["stream", "rustls"], default-features = false }
clap = "4.4.6"
pbr = "1.1.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.28"
zip = "0.6.6"
quick-xml = "0.28.2"
mktemp = "0.5.1"
serde_json = "1.0.107"
anyhow = "1.0.75"

[target.'cfg(unix)'.dependencies]
# `clear_bindings()` workaround
# Because they haven't released a new version with this PR merged:
# https://github.com/rusqlite/rusqlite/pull/1268
rusqlite = { git = "https://github.com/rusqlite/rusqlite", rev = "964443213", features = ["bundled"] }

[target.'cfg(not(unix))'.dependencies]
rusqlite = { git = "https://github.com/rusqlite/rusqlite", rev = "964443213" }

