[package]
name = "unicode-name"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.6"
unicode-segmentation = "1.10.1"
unic-ucd = "0.9.0"
prettytable-rs = "0.10.0"
anyhow = "1.0.75"
utf8-chars = "2.1.0"
serde_json = "1.0.107"
once_cell = "1.18.0"

[target.'cfg(not(unix))'.dependencies]
rusqlite = { git = "https://github.com/rusqlite/rusqlite", rev = "964443213" }

[target.'cfg(unix)'.dependencies]
rusqlite = { git = "https://github.com/rusqlite/rusqlite", rev = "964443213", features = ["bundled"] }
