[package]
name = "wav-fourier-series"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bczhc_lib = { path = "../../lib" }
clap = "4.4.6"
hound = "3.5.1"
num = "0.4.1"
threadpool = "1.8.1"
num_cpus = "1.16.0"
rayon = "1.8.0"
