[package]
name = "x11-event-monitor"
version = "1.0.0"
edition = "2021"

[dependencies]
libc = "0.2.140"
chrono = "0.4.24"
bczhc_lib = { path = "../../lib" }
proc-macro2 = "1.0.53"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
clap = "4.1.13"

[target.'cfg(target_os = "linux")'.dependencies]
libxdo-sys = "0.11.0"
x11-clipboard = "0.7.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.28.3"
